# robologics_brause

./: .gitignore  Dockerfile  README.md  start_docker.sh
src/Robogistics_Brause/: package.xml  setup.cfg  setup.py
src/kuka-eki/: .gitignore
src/kuka-eki/krl/: EkiHwInterface.xml  EkiIOInterface.xml  kuka_eki_hw_interface.src
src/kuka-eki/kuka_common/: CMakeLists.txt  package.xml
src/kuka-eki/kuka_common_moveit_config/: CMakeLists.txt  package.xml
src/kuka-eki/kuka_eki_hw_interface/: CMakeLists.txt  package.xml  ros2_control_kuka_eki.xml
src/kuka-eki/kuka_eki_io_interface/: CMakeLists.txt  package.xml
src/kuka-eki/kuka_eki_io_interface/include/kuka_eki_io_interface/: kuka_eki_io_interface.h
src/kuka-eki/kuka_eki_io_interface/launch/: eki_io_interface.launch.py
src/kuka-eki/kuka_eki_io_interface/src/: kuka_eki_io_interface.cpp  kuka_eki_io_interface_node.cpp
src/kuka-eki/kuka_kr10_description/: CMakeLists.txt  package.xml
src/kuka-eki/kuka_kr120_description/: CMakeLists.txt  package.xml
src/kuka-eki/kuka_kr150_description/: CMakeLists.txt  package.xml
src/kuka-eki/kuka_kr16_description/: CMakeLists.txt  package.xml
src/kuka-eki/kuka_kr210_description/: CMakeLists.txt  package.xml
src/kuka-eki/kuka_kr3_description/: CMakeLists.txt  package.xml
src/kuka-eki/kuka_kr5_description/: CMakeLists.txt  package.xml
src/kuka-eki/kuka_kr6_description/: CMakeLists.txt  package.xml
src/r2e_demos/: package.xml  setup.cfg  setup.py
src/r2e_demos/r2e_demos/: geometrie_pub.py  geometrie_pub_2.py  geometrie_sub.py  r2e_cubes.py  test_ros_env.py
src/ready2_educate/kuka_kr3_cell_description/: CMakeLists.txt  package.xml
src/ready2_educate/vacuum_gripper/: CMakeLists.txt  package.xml
src/ready2_educate/zimmer_gp406n/: CMakeLists.txt  package.xml
src/robogistics_brause/: package.xml  setup.cfg  setup.py
src/robogistics_brause/robogistics_brause/: coordinates_in_camera_frame sissi.py  coordinates_in_camera_frame.py  coordinates_in_camera_frame_leon.py  coordinates_in_camera_frame_v2.py  get_brause_v1.py  gui.ipynb  marker_publisher.py  plot.py  powerhouse.py  readme.md  test.ipynb  test_ros_env copy.py  test_ros_env.py  test_ros_env_copy.py  tf_listener.py  tf_tools.py
src/ros_environment/: package.xml  setup.cfg  setup.py
src/ros_environment/launch/: joy_handler.launch.py  joy_node.launch.py
(+87 files in other folders)
